tooling/nargo_cli/tests/snapshots/execution_success/simple_array_param/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "xs",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : [_2]",
    "EXPR [ (-1, _1) (1, _2) 0 ]"
  ],
  "debug_symbols": "dY/RCoMwDEX/Jc990MEQ/JUxJNYohdCW2ApD/PdFsZsM9pTenJ5Lu8JAfZ4658cwQ/tYoRfH7KaOg8XkgtftuhkosUtCpCu4cLUiCvkErc/MBhbkfFyaI/pjJhSllQHyg04tHB3TftrM167+q3VTn3Ld3D76Xf2nJrROfl+8oDjsmc44Zm8vNL1iIeXHUYKlIQvtTQfT7jc=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
